--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -206,12 +206,12 @@ body {
 }
 
 ::selection {
-  background: #006544;
+  background: #d51920;
   color: #fff !important;
 }
 
 ::-moz-selection {
-  background: #006544;
+  background: #d51920;
   color: #fff !important;
 }
 
@@ -244,7 +244,7 @@ body {
 .section-heading h6 {
   font-size: 15px;
   font-weight: 700;
-  color: #d51920;
+  color: #006544;
   text-transform: uppercase;
   margin-bottom: 15px;
 }
@@ -259,20 +259,20 @@ body {
 
 .section-heading h4 em {
   font-style: normal;
-  color: #d51920;
+  color: #006544;
 }
 
 .section-heading .line-dec {
   width: 50px;
   height: 2px;
-  background-color: #d51920;
+  background-color: #006544;
 }
 
 .border-first-button a {
   display: inline-block !important;
   padding: 10px 20px !important;
-  color: #006544 !important;
-  border: 1px solid #006544 !important;
+  color: #d51920 !important;
+  border: 1px solid #d51920 !important;
   border-radius: 23px;
   font-weight: 500 !important;
   letter-spacing: 0.3px !important;
@@ -280,7 +280,7 @@ body {
 }
 
 .border-first-button a:hover {
-  background-color: #006544;
+  background-color: #d51920;
   color: #fff !important;
 }
 
@@ -348,8 +348,8 @@ intro
 .intro-banner a {
   display: inline-block !important;
   padding: 10px 20px !important;
-  color: #006544 !important;
-  border: 1px solid #006544 !important;
+  color: #d51920 !important;
+  border: 1px solid #d51920 !important;
   border-radius: 23px;
   font-weight: 500 !important;
   letter-spacing: 0.3px !important;
@@ -359,7 +359,7 @@ intro
 }
 
 .intro-banner a:hover {
-  background-color: #006544;
+  background-color: #d51920;
   color: #fff !important;
 }
 
@@ -417,7 +417,7 @@ header
 }
 
 .pre-header ul.info li a:hover {
-  color: #006544;
+  color: #d51920;
 }
 
 .pre-header ul.info li a i {
@@ -447,7 +447,7 @@ header
 }
 
 .pre-header ul.social-media li a:hover {
-  background-color: #006544;
+  background-color: #d51920;
 }
 
 .background-header {
@@ -466,7 +466,7 @@ header
 }
 
 .background-header .main-nav .nav li:hover a {
-  color: #006544;
+  color: #d51920;
 }
 
 .background-header .nav li a.active {
@@ -478,7 +478,7 @@ header
   position: absolute;
   width: 100%;
   height: 1px;
-  background-color: #006544;
+  background-color: #d51920;
   content: "";
   left: 50%;
   bottom: -20px;
@@ -510,7 +510,6 @@ header
 
 .header-area .main-nav .logo {
   width: 22%;
-
   float: left;
   -webkit-transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
@@ -587,12 +586,12 @@ header
 
 .header-area .main-nav .nav li:hover a,
 .header-area .main-nav .nav li a.active {
-  color: #006544 !important;
+  color: #d51920 !important;
 }
 
 .background-header .main-nav .nav li:hover a,
 .background-header .main-nav .nav li a.active {
-  color: #006544 !important;
+  color: #d51920 !important;
   opacity: 1;
 }
 
@@ -655,7 +654,7 @@ header
 
 .header-area .main-nav .nav li.submenu ul li a:hover {
   background: #fff;
-  color: #006544 !important;
+  color: #d51920 !important;
   padding-left: 25px;
 }
 
@@ -795,7 +794,7 @@ header
 }
 
 .header-area.header-sticky .nav li a.active {
-  color: #006544;
+  color: #d51920;
 }
 
 @media (max-width: 1200px) {
@@ -829,12 +828,14 @@ header
   .background-header .main-nav .nav {
     margin-top: 80px !important;
   }
+
   .header-area .main-nav .logo {
+    width: 50%;
     color: #1e1e1e;
   }
   .header-area.header-sticky .nav li a:hover,
   .header-area.header-sticky .nav li a.active {
-    color: #006544 !important;
+    color: #d51920 !important;
     opacity: 1;
   }
   .header-area.header-sticky .nav li.search-icon a {
@@ -896,7 +897,7 @@ header
   }
   .header-area .main-nav .nav li a:hover {
     background: #eee !important;
-    color: #006544 !important;
+    color: #d51920 !important;
   }
   .header-area .main-nav .nav li.submenu ul {
     position: relative;
@@ -1011,7 +1012,7 @@ preloader
   height: 16px;
   top: 12px;
   left: 15px;
-  background: #006544;
+  background: #d51920;
   border-radius: 50%;
   -webkit-transform: translateX(0);
   transform: translateX(0);
@@ -1034,7 +1035,7 @@ preloader
   width: 16px;
   height: 16px;
   margin-left: 16px;
-  background: #006544;
+  background: #d51920;
   border-radius: 50%;
 }
 
@@ -1079,6 +1080,7 @@ Banner Style
 
 .main-banner .left-content {
   margin-right: 15px;
+  margin-top: 150px;
 }
 
 .main-banner .left-content h6 {
@@ -1126,6 +1128,7 @@ About Style
 
 .about-left-image img {
   margin-right: 45px;
+  margin-bottom: 50px;
 }
 
 .about-right-content p {
@@ -1189,11 +1192,11 @@ About Style
 }
 
 .first-skill-item .progress .progress-bar {
-  border-color: #006544;
+  border-color: #d51920;
 }
 
 .second-skill-item .progress .progress-bar {
-  border-color: #d51920;
+  border-color: #006544;
 }
 
 .third-skill-item .progress .progress-bar {
@@ -1617,7 +1620,7 @@ Free Quote
   outline: none;
   border: none;
   margin-left: 30px;
-  background-color: #d51920;
+  background-color: #006544;
   font-size: 15px;
   color: #fff;
 }
@@ -1687,7 +1690,7 @@ Portfolio
 
 .portfolio-item:hover .down-content h4,
 .portfolio-item:hover .down-content span {
-  color: #006544;
+  color: #d51920;
 }
 
 .portfolio-item .thumb img {
@@ -1745,7 +1748,7 @@ Portfolio
 
 .our-portfolio .owl-nav span:hover {
   color: #fff;
-  background-color: #006544;
+  background-color: #d51920;
 }
 
 /* 
@@ -1806,7 +1809,7 @@ Blog
   font-size: 15px;
   color: #fff;
   padding: 8px 12px;
-  background-color: #d51920;
+  background-color: #006544;
   border-radius: 18px;
   display: inline-block;
 }
@@ -1879,7 +1882,7 @@ Blog
   font-size: 15px;
   color: #fff;
   padding: 8px 12px;
-  background-color: #d51920;
+  background-color: #006544;
   border-radius: 18px;
   display: inline-block;
 }
@@ -1998,7 +2001,7 @@ form#contact #map iframe {
 }
 
 .fill-form .icon:hover a {
-  color: #006544;
+  color: #d51920;
 }
 
 form#contact input {
@@ -2046,20 +2049,20 @@ form#contact button {
   background-color: #fff;
   font-size: 15px;
   font-weight: 400;
-  color: #006544;
+  color: #d51920;
   margin-top: 30px;
   width: 100%;
   text-transform: capitalize;
   padding: 12px 25px;
   border-radius: 23px;
   letter-spacing: 0.25px;
-  border: 1px solid #006544;
+  border: 1px solid #d51920;
   transition: all 0.3s;
   outline: none;
 }
 
 form#contact button:hover {
-  background-color: #006544 !important;
+  background-color: #d51920 !important;
   color: #fff !important;
 }
 
@@ -2095,6 +2098,14 @@ responsive
 */
 
 @media (max-width: 1200px) {
+  .header-area .main-nav .logo {
+    width: 30%;
+    float: left;
+    -webkit-transition: all 0.3s ease 0s;
+    -moz-transition: all 0.3s ease 0s;
+    -o-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+  }
   .header-area .main-nav .logo h4 {
     font-size: 24px;
   }
@@ -2108,6 +2119,14 @@ responsive
 }
 
 @media (max-width: 992px) {
+  .header-area .main-nav .logo {
+    width: 28%;
+    float: left;
+    -webkit-transition: all 0.3s ease 0s;
+    -moz-transition: all 0.3s ease 0s;
+    -o-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+  }
   .intro-banner:before {
     display: none;
   }
@@ -2122,7 +2141,7 @@ responsive
   }
   .main-banner {
     text-align: center;
-    padding: 226px 0px 30px 0px;
+    padding: 40px 0px 30px 0px;
   }
   .main-banner:before {
     display: none;
@@ -2180,6 +2199,14 @@ responsive
 }
 
 @media (max-width: 767px) {
+  .header-area .main-nav .logo {
+    width: 50%;
+    float: left;
+    -webkit-transition: all 0.3s ease 0s;
+    -moz-transition: all 0.3s ease 0s;
+    -o-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+  }
   .header-area .main-nav .logo h4 {
     font-size: 30px;
   }
@@ -2187,6 +2214,7 @@ responsive
     max-width: 30px;
     margin-left: 5px;
   }
+
   .main-banner .info-stat {
     margin-bottom: 15px;
   }
@@ -2212,7 +2240,7 @@ responsive
     padding: 45px;
   }
   .services .naccs .menu div {
-    font-size: 0px;
+    font-size: 10px;
   }
   .services ul.nacc li .right-image img {
     float: none;
@@ -2258,5 +2286,16 @@ responsive
   }
   form#contact {
     padding: 30px;
+  }
+}
+
+@media (max-width: 400px) {
+  .services .icon img {
+    margin: 0px;
+    max-width: 40px;
+    min-width: 40px;
+  }
+  .services .naccs .menu div {
+    font-size: 8px;
   }
 }
