--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1913,6 +1913,13 @@ contact
 .contact-us {
   padding-top: 130px;
 }
+.industry {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 800px;
+  font-family: "Fira Sans", sans-serif;
+}
 
 .contact-us .section-heading .line-dec {
   margin: 0 auto;
@@ -2299,5 +2306,83 @@ responsive
   }
   .services .naccs .menu div {
     font-size: 8px;
+  }
+}
+
+.testimonial-section {
+  background-color: #ffffff;
+  padding: 80px 0;
+  min-height: 100vh;
+}
+.testi-img .img-box {
+  max-width: 750px;
+  margin: auto;
+  text-align: center;
+  position: relative;
+}
+.testi-img .circle {
+  height: 360px;
+  width: 360px;
+  background-color: #fb9c9a;
+  position: inherit;
+  border-radius: 50%;
+  left: 0;
+  bottom: 0;
+  transition: all 0.5s ease;
+}
+.testi-img .img-box-inner {
+  position: relative;
+  border-radius: 0 0 180px 180px;
+  overflow: hidden;
+}
+.testi-img .img-box-inner img {
+  max-width: 750px;
+}
+.testimonial-section .carousel-inner {
+  margin-bottom: 20px;
+}
+.testimonial-section .carousel-control-prev {
+  margin-right: 10px;
+}
+.testimonial-section .carousel-control-next,
+.testimonial-section .carousel-control-prev {
+  position: relative;
+  height: 35px;
+  width: 35px;
+  background-color: #006544;
+  display: inline-flex;
+  border-radius: 50%;
+}
+.testimonial-section .carousel-control-prev img,
+.testimonial-section .carousel-control-next img {
+  width: 15px;
+}
+.testi-item h3,
+.testi-item p {
+  font-size: 18px;
+}
+.testi-item h3 {
+  text-transform: capitalize;
+}
+
+/* Responsive */
+@media (max-width: 991px) {
+  .testi-img .img-box {
+    max-width: 300px;
+  }
+  .testi-img .circle {
+    height: 300px;
+    width: 300px;
+  }
+  .testi-img .img-box-inner {
+    border-radius: 0 0 150px 150px;
+  }
+  .testi-img .img-box-inner img {
+    max-width: 230px;
+  }
+}
+@media (max-width: 767px) {
+  .testi-img {
+    margin-bottom: 25px;
   }
 }
