--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2099,7 +2099,7 @@ Footer Style
 */
 
 footer {
-  background-image: url(../images/footer-bg.jpg);
+  background-image: url(../images/footer-bg-v.jpg);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
