--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -859,7 +859,7 @@ header
     padding: 0px;
   }
   .header-area .logo {
-    margin-left: 30px;
+    margin-left: 0px;
   }
   .header-area .menu-trigger {
     display: block !important;
@@ -950,7 +950,92 @@ header
 preloader
 --------------------------------------------- 
 */
+.dot-elastic {
+  position: relative;
+  width: 15px;
+  height: 15px;
+  border-radius: 10px;
+  background-color: #d51920;
+  color: #d51920;
+  animation: dot-elastic 1s infinite linear;
+}
+.dot-elastic::before,
+.dot-elastic::after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 0;
+}
+.dot-elastic::before {
+  left: -20px;
+  width: 15px;
+  height: 15px;
+  border-radius: 10px;
+  background-color: #d51920;
+  color: #d51920;
+  animation: dot-elastic-before 1s infinite linear;
+}
+.dot-elastic::after {
+  left: 20px;
+  width: 15px;
+  height: 15px;
+  border-radius: 10px;
+  background-color: #d51920;
+  color: #d51920;
+  animation: dot-elastic-after 1s infinite linear;
+}
 
+@keyframes dot-elastic-before {
+  0% {
+    transform: scale(1, 1);
+  }
+  25% {
+    transform: scale(1, 1.5);
+  }
+  50% {
+    transform: scale(1, 0.67);
+  }
+  75% {
+    transform: scale(1, 1);
+  }
+  100% {
+    transform: scale(1, 1);
+  }
+}
+@keyframes dot-elastic {
+  0% {
+    transform: scale(1, 1);
+  }
+  25% {
+    transform: scale(1, 1);
+  }
+  50% {
+    transform: scale(1, 1.5);
+  }
+  75% {
+    transform: scale(1, 1);
+  }
+  100% {
+    transform: scale(1, 1);
+  }
+}
+@keyframes dot-elastic-after {
+  0% {
+    transform: scale(1, 1);
+  }
+  25% {
+    transform: scale(1, 1);
+  }
+  50% {
+    transform: scale(1, 0.67);
+  }
+  75% {
+    transform: scale(1, 1.5);
+  }
+  100% {
+    transform: scale(1, 1);
+  }
+}
 .js-preloader {
   position: fixed;
   top: 0;
@@ -973,7 +1058,8 @@ preloader
   height: 100vh;
 }
 #js-preloader img {
-  max-width: 100%;
+  max-width: 50%;
+  max-height: 70%;
 }
 
 #js-preloader .preloader-inner {
@@ -2123,58 +2209,7 @@ responsive
 --------------------------------------------- 
 */
 
-@media (max-width: 2690px) {
-  #js-preloader .preloader-inner {
-    margin-right: 80px;
-    margin-top: 0.5rem; /* Reduce the gap between the image and dots */
-    text-align: center;
-  }
-  .column {
-    margin-bottom: 40%;
-    width: 60%; /* Set the width of the column */
-    height: 550px;
-    box-sizing: border-box; /* Include padding in the width of the column */
-  }
-}
-@media (max-width: 2250px) {
-  #js-preloader .preloader-inner {
-    margin-right: 120px;
-    margin-top: 0.5rem; /* Reduce the gap between the image and dots */
-    text-align: center;
-  }
-  .column {
-    margin-bottom: 30%;
-    width: 60%; /* Set the width of the column */
-    height: 550px;
-    box-sizing: border-box; /* Include padding in the width of the column */
-  }
-}
-@media (max-width: 1915px) {
-  #js-preloader .preloader-inner {
-    margin-right: 113px;
-    margin-top: 0.5rem; /* Reduce the gap between the image and dots */
-    text-align: center;
-  }
-  .column {
-    margin-bottom: 25%;
-    width: 60%; /* Set the width of the column */
-    height: 550px;
-    box-sizing: border-box; /* Include padding in the width of the column */
-  }
-}
-
 @media (max-width: 1200px) {
-  #js-preloader .preloader-inner {
-    margin-left: 57px;
-    margin-top: 0.5rem; /* Reduce the gap between the image and dots */
-    text-align: center;
-  }
-  .column {
-    margin-bottom: 10%;
-    width: 60%; /* Set the width of the column */
-    height: 550px;
-    box-sizing: border-box; /* Include padding in the width of the column */
-  }
   .header-area .main-nav .logo {
     width: 30%;
     float: left;
@@ -2196,19 +2231,8 @@ responsive
 }
 
 @media (max-width: 992px) {
-  #js-preloader .preloader-inner {
-    margin-left: 73px;
-    margin-top: 0.5rem; /* Reduce the gap between the image and dots */
-    text-align: center;
-  }
-  .column {
-    margin-bottom: 5%;
-    width: 60%; /* Set the width of the column */
-    height: 550px;
-    box-sizing: border-box; /* Include padding in the width of the column */
-  }
   .header-area .main-nav .logo {
-    width: 28%;
+    width: 60%;
     float: left;
     -webkit-transition: all 0.3s ease 0s;
     -moz-transition: all 0.3s ease 0s;
@@ -2287,21 +2311,6 @@ responsive
 }
 
 @media (max-width: 767px) {
-  .column {
-    margin-bottom: 40%;
-    width: 80%; /* Set the width of the column */
-    height: 250px;
-    box-sizing: border-box; /* Include padding in the width of the column */
-  }
-  .header-area .main-nav .logo {
-    width: 50%;
-    float: left;
-    -webkit-transition: all 0.3s ease 0s;
-    -moz-transition: all 0.3s ease 0s;
-    -o-transition: all 0.3s ease 0s;
-    transition: all 0.3s ease 0s;
-    margin: 0;
-  }
   .header-area .main-nav .logo h4 {
     font-size: 30px;
   }
@@ -2386,11 +2395,6 @@ responsive
 }
 
 @media (max-width: 400px) {
-  #js-preloader .preloader-inner {
-    margin-left: 100px;
-    margin-top: 0.5rem; /* Reduce the gap between the image and dots */
-    text-align: center;
-  }
   .services .icon img {
     margin: 0px;
     max-width: 40px;
@@ -2455,14 +2459,6 @@ responsive
 }
 .testi-item h3 {
   text-transform: capitalize;
-}
-@media (max-width: 540px) {
-  .column {
-    margin-bottom: 28%;
-    width: 80%; /* Set the width of the column */
-    height: 250px;
-    box-sizing: border-box; /* Include padding in the width of the column */
-  }
 }
 
 /* Responsive */
