--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -952,9 +952,9 @@ preloader
 */
 .dot-elastic {
   position: relative;
-  width: 15px;
-  height: 15px;
-  border-radius: 10px;
+  width: 12px;
+  height: 12px;
+  border-radius: 8px;
   background-color: #d51920;
   color: #d51920;
   animation: dot-elastic 1s infinite linear;
@@ -968,18 +968,18 @@ preloader
 }
 .dot-elastic::before {
   left: -20px;
-  width: 15px;
-  height: 15px;
-  border-radius: 10px;
+  width: 12px;
+  height: 12px;
+  border-radius: 8px;
   background-color: #d51920;
   color: #d51920;
   animation: dot-elastic-before 1s infinite linear;
 }
 .dot-elastic::after {
   left: 20px;
-  width: 15px;
-  height: 15px;
-  border-radius: 10px;
+  width: 12px;
+  height: 12px;
+  border-radius: 8px;
   background-color: #d51920;
   color: #d51920;
   animation: dot-elastic-after 1s infinite linear;
@@ -1058,8 +1058,9 @@ preloader
   height: 100vh;
 }
 #js-preloader img {
-  max-width: 50%;
-  max-height: 70%;
+  margin-left: 12px;
+  max-width: 60%;
+  max-height: 90%;
 }
 
 #js-preloader .preloader-inner {
@@ -2443,8 +2444,8 @@ responsive
 .testimonial-section .carousel-control-next,
 .testimonial-section .carousel-control-prev {
   position: relative;
-  height: 35px;
-  width: 35px;
+  height: 60px;
+  width: 60px;
   background-color: #006544;
   display: inline-flex;
   border-radius: 50%;
