--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2318,7 +2318,7 @@ responsive
 @media (max-width: 767px) {
   #js-preloader img {
     margin-left: 12px;
-    max-width: 80%;
+    max-width: 100%;
     max-height: 90%;
   }
   .possition {
@@ -2409,6 +2409,9 @@ responsive
 }
 
 @media (max-width: 400px) {
+  #about {
+    padding-top: 0px;
+  }
   .services .icon img {
     margin: 0px;
     max-width: 40px;
